<resources>
    <string name="app_initializing">App initializing…</string>
    <string name="network_fail">Network detection failed, please check the network…</string>
    <string name="bonus_sign">Sign in now</string>
    <string name="bonus_sign_1">Checked in continuously</string>
    <string name="bonus_day">day</string>
    <string name="card_bind_info">Activity rewards</string>
    <string name="activity_bind_info">Registered winnings</string>
    <string name="coin_give">Give away</string>
    <string name="coin">COIN</string>
    <string name="Available_balance">Available balance</string>
    <string name="coin_pay_ali">Alipay</string>
    <string name="coin_ali_not_install">Alipay is not installed</string>
    <string name="convertible_game_currency">Convertible game currency/coins</string>
    <string name="convert_game_currency_msg">presented %1$s coins cannot be converted to game currency/coins</string>
    <string name="coin_charge_success">Top up successfully</string>
    <string name="copy_link">Copy Link</string>
    <string name="copy_success">Copy successfully</string>
    <string name="save_success_picture">Save picture successfully</string>
    <string name="save_failed_picture">Save picture failed</string>
    <string name="edit_profile_update_nickname">change username</string>
    <string name="edit_profile_update_avatar_success">Avatar set successfully</string>
    <string name="edit_profile_name_hint">Please enter a nickname~</string>
    <string name="edit_profile_name_empty">Please enter a nickname</string>
    <string name="edit_profile_right_date">Please select the correct date</string>
    <string name="follow">follow</string>
    <string name="following">followed</string>
    <string name="follow_my_follow">Favourite</string>
    <string name="follow_ta_follow">TA\'s follow</string>
    <string name="follow_no_follow">You haven\'t followed anyone</string>
    <string name="follow_do_follow">Hurry up and follow the people you are interested in</string>
    <string name="follow_no_follow_2">TA hasn\'t followed anyone yet</string>
    <string name="fans">Fans</string>
    <string name="fans_my_fans">My fans</string>
    <string name="fans_ta_fans">TA\'s fans</string>
    <string name="fans_no_fans">You have no fans yet</string>
    <string name="fans_do_fans">Improving personal information will make more people follow to you~</string>
    <string name="fans_no_fans_2">TA has no fans yet</string>
    <string name="find_pwd_forget">forget password</string>
    <string name="find_pwd_find">Commit</string>
    <string name="guard_choose_duration">Choose the guard time</string>
    <string name="guard_right">Select privilege</string>
    <string name="guard_buy">Open now</string>
    <string name="guard_buy_2">Open guard</string>
    <string name="guard_buy_3">Renewal Guardian</string>
    <string name="guard_my">mine</string>
    <string name="guard_guard">guard</string>
    <string name="guard_week_con">Contribution this week</string>
    <string name="guard_no_data">Become the first guardian of TA</string>
    <string name="guard_tip_0">Go ahead and turn on guard for your favorite anchor</string>
    <string name="guard_tip_1">You are the month guardian of the current anchor\nGuardian date is up</string>
    <string name="guard_tip_2">You are the year guardian of the current anchor\nGuardian date is up</string>
    <string name="guard_gift_tip">Year guardian exclusive gift</string>
    <string name="guard_no_data_2">You haven\'t protected yet</string>
    <string name="guard_buy_tip">You are the annual guardian of the current anchor\nCannot activate 7-day/month guardian</string>
    <string name="guard_buy_tip_2">You are the monthly guardian of the current anchor. The activation of the annual guardian will cover your monthly guardian period. Is it active?</string>
    <string name="guard_buy_tip_3">You will spend %1$s%2$s to activate %3$s for the host</string>
    <string name="guard_name_1">Sky guard</string>
    <string name="guard_name_2">Moon Guardian</string>
    <string name="guard_name_3">Year guard</string>
    <string name="guard_list">Guardian</string>
    <string name="guard_buy_msg">Guarded the anchor</string>
    <string name="home_page">Homepage</string>
    <string name="impress">Anchor impression</string>
    <string name="impress_add">Add impression</string>
    <string name="impress_add_max">Add up to three impressions</string>
    <string name="impress_please_choose">Please select an impression</string>
    <string name="impress_not_changed">Unmodified impression</string>
    <string name="impress_tip">Please select your impression of the anchor</string>
    <string name="img_camera_cancel">Cancel photo</string>
    <string name="img_alumb_cancel">cancel selection</string>
    <string name="img_crop_cancel">Cancel crop</string>
    <string name="login_tip_1">Sign in means consent</string>
    <string name="login_input_phone">Please enter the phone number</string>
    <string name="login_input_pwd">Please enter password</string>
    <string name="login_immediately_login">Login</string>
    <string name="login_immediately_register">register</string>
    <string name="login_forget_pwd">forget password</string>
    <string name="login_phone_error">Please enter the correct phone number</string>
    <string name="login_auth_ing">Authorizing login</string>
    <string name="live_anchor">Anchor</string>
    <string name="live_start">Live broadcast start</string>
    <string name="live_room_type">Room type</string>
    <string name="live_share_to">share to</string>
    <string name="live_cover">Live cover</string>
    <string name="live_cover_2">Change cover</string>
    <string name="live_title">Live title</string>
    <string name="live_title_hint">Write a title for the live broadcast</string>
    <string name="live_set_pwd">Please set the room password</string>
    <string name="live_set_fee">Please set the charge amount\n(The income is subject to the end of the live broadcast)</string>
    <string name="live_set_pwd_empty">Please set the room password</string>
    <string name="live_set_fee_empty">Please set the charge amount</string>
    <string name="live_time_fee">Charge amount</string>
    <string name="live_choose_charge">Choose to charge</string>
    <string name="live_end_live">Do you want to end the live broadcast?</string>
    <string name="live_beauty">Beauty</string>
    <string name="live_camera">Flip</string>
    <string name="live_flash">Flash</string>
    <string name="live_music">Music</string>
    <string name="live_share">Share it</string>
    <string name="live_game">Game</string>
    <string name="live_red_pack">Red envelope</string>
    <string name="live_link_mic">Lianmai</string>
    <string name="open_vibrator">Open vibrator</string>
    <string name="live_open_flash">Only the rear camera can turn on the flash</string>
    <string name="live_you_are_shut">You have been muted</string>
    <string name="live_end">Live broadcast is over</string>
    <string name="live_back">Back to homepage</string>
    <string name="live_duration">Live duration</string>
    <string name="live_votes">reward</string>
    <string name="live_watch_num">Viewers</string>
    <string name="live_end_ing">Closed</string>
    <string name="live_say_something">Say something to everyone…</string>
    <string name="live_open_alba">Open the barrage</string>
    <string name="live_tiao">Article</string>
    <string name="live_input_password">Please enter the room code</string>
    <string name="live_password_error">wrong password</string>
    <string name="live_play_error">Playback failed</string>
    <string name="live_play_error_2">Video format is not supported</string>
    <string name="live_guard">guard</string>
    <string name="live_lighted">I lit up</string>
    <string name="live_enter_room">Entered the live broadcast room</string>
    <string name="live_send_gift">Send a gift</string>
    <string name="live_send_gift_1">give away</string>
    <string name="live_send_gift_2">A</string>
    <string name="live_send_gift_3">Gave one</string>
    <string name="live_gift_send_lian">Continuous prize</string>
    <string name="live_gift_send_lian_2">x</string>
    <string name="live_gift_send_lian_3">Continuous x</string>
    <string name="live_liang">Pretty</string>
    <string name="live_user_send">Send out</string>
    <string name="live_user_get">income</string>
    <string name="live_user_city_empty">City is not set</string>
    <string name="live_contribute">Gift contribution list</string>
    <string name="live_setting_kick">Kick people</string>
    <string name="live_setting_gap">Permanent Mute</string>
    <string name="live_setting_gap_2">Mute</string>
    <string name="live_setting_admin">Set to manage</string>
    <string name="live_setting_admin_cancel">Cancel management</string>
    <string name="live_setting_admin_list">Administrator list</string>
    <string name="live_setting_close_live">Close live</string>
    <string name="live_setting_close_live_2">Disable live streaming</string>
    <string name="live_setting_forbid_account">Disable account</string>
    <string name="live_admin_count">Current administrator</string>
    <string name="live_kicked">Kicked out of the room</string>
    <string name="live_shut">Be permanently banned</string>
    <string name="live_shut_2">Mute by this scene</string>
    <string name="live_set_admin">Be made administrator</string>
    <string name="live_set_admin_cancel">Cancelled administrator</string>
    <string name="live_kicked_2">You have been kicked out of the room</string>
    <string name="live_illegal">Your live broadcast content might be issue. Please contact customer service to check! </string>
    <string name="live_steam_issue">Your live broadcast might be network issue. Please try again! </string>
    <string name="live_anchor_leave">The anchor will leave for a while, the excitement will not stop, don’t go away</string>
    <string name="modify_pwd_old_1">Please enter the old password</string>
    <string name="modify_pwd_new_1">Please enter the new password</string>
    <string name="modify_pwd_confirm_1">Please enter confirm password</string>
    <string name="modify_pwd_confirm_2">Confirm the changes</string>
    <string name="set_transaction_pwd">set transaction password</string>
    <string name="reg_input_bank_code">Please enter  IFSC code</string>
    <string name="recommend_skip">skip</string>
    <string name="Please_bind_the_bank_card_first">Please bind the bank card first</string>
    <string name="total_balance">COIN</string>
    <string name="please_enter_withdrawal_amount">Please enter withdrawal amount</string>
    <string name="Please_enter_transaction_password">Please enter the transaction password</string>
    <string name="withdraw">withdraw</string>
    <string name="minimum_withdrawal">The minimum withdrawal amount is COIN %s and the maximum is COIN %s</string>
    <string name="currency_name">Currency:</string>
    <string name="please_select_currency">Please select currency</string>
    <string name="please_select_bank">Please select bank</string>
    <string name="bank_name">Bank:</string>
    <string name="please_enter_bank_account_no">Please enter bank account no</string>
    <string name="bank_ifsc_code">IFSC code:</string>
    <string name="bank_card_account">Bank account no:</string>
    <string name="please_enter_the_cardholders_name">Please enter the cardholders name</string>
    <string name="cardholders_name">Beneficiary name:</string>
    <string name="recharge">Deposit</string>
    <string name="reset">Reset</string>
    <string name="machine_selection">Random</string>
    <string name="draw_time">00:00</string>
    <string name="Betting">Buy</string>
    <string name="reg_dialog_content_tip">Link your bank account and get reward of %s Coins</string>
    <string name="to_link">To link</string>
</resources>