<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="174dp"
        app:cardCornerRadius="5dp"

        >

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">


        <TextView
            android:id="@+id/re_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#353535"
            android:textSize="17sp"
            android:text="Activity reward"/>


            <TextView
                android:id="@+id/coin_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center"
                android:text="@string/reg_dialog_content_tip"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/reg_tip_layout_top"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="0.5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/reg_cancle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/reg_tip_layout_right"
                        android:textColor="#353535"
                        android:text="@string/recommend_skip"
                        />

                    <TextView
                        android:id="@+id/reg_sure"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#007aff"
                        android:text="@string/to_link"
                        />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>